@@ -1,3 +1,8 @@
+2012-09-14  Siddhesh Poyarekar  <siddhesh@redhat.com>
+
+	* valarith.c (value_concat): Replace unsafe ALLOCA with
+	XMALLOC/XFREE.
+
 2012-09-14  Pedro Alves  <palves@redhat.com>
 
 	* gdb.1 (SEE ALSO): Expand pointer to GDB's Texinfo manual.
